--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="logo">logo</string>
+    <string name="title_activity_scrolling">Feicon App</string>
+    <string name="large_text">
+        "Banana é legal"
+    </string>
+    <string name="title_activity_gallery">Feicon App</string>
 </resources>
